# src/routes/index.js
@@ -1,7 +1,7 @@
 import cep from "./cep.js";
 import swagger from "./swagger.js";
 
-export default function mapRoutes({ app, passport }) {
-  app.use("/cep", passport.authenticate('basic', {session: false}), cep);
+export default function mapRoutes({ app, passport, logger }) {
+  app.use("/cep", logger, passport.authenticate('basic', {session: false}), cep);
   app.use("/api-docs", swagger);
 }
